<resources>
    <string name="app_name">TMS</string>
    <string name="action_settings">MDC</string>
    <string name="first_tab_name">Trip               </string>
    <string name="second_tab_name">Fare              </string>
    <string name="third_tab_name">Settings              </string>


    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="null_avoid_text">Please try again</string>
    <string name="no_route_found">No available Route Found</string>
    <string name="no_vehicle_found">No available vehicle on the Route</string>
    <string name="error_route_list">Error happens while getting Route list : </string>

    <!-- Bluetooth Printer -->
    <string name="printer_connected">Connected</string>
    <string name="printer_unconnected">Unconnected</string>
    <string name="section_type">Section</string>
    <string name="device_type">Device</string>
    <string name="pair">Pair</string>
    <string name="search">Search</string>


    <!-- Dialog -->
    <string name="log_off_confirm_title">Do you want to log out ?</string>
    <string name="trip_off_confirm_title">Do you want to generate Trip report ?</string>
    <string name="fare_ask_title">Do you want to print the information below ?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>



    <!-- Trip Off Tab -->
    <string name="trip_off_route_legend">Route : </string>
    <string name="trip_off_vechicle_legend">Vehicle : </string>
    <string name="trip_off_route_title">Please Select Route</string>
    <string name="trip_off_vehicle_title">Please Select Vehicle</string>
    <string name="trip_off_wait">Please Wait...</string>
    <string name="trip_off_log_out">LOG OUT</string>
    <string name="trip_off_trip_on">TRIP ON</string>
    <string name="trip_off_process">STARTING...</string>

    <!-- MDC Main -->
    <string name="gps_permission_check">GPS permission is needed to proceed service</string>
    <string name="gps_permission_grant">User grants GPS permission</string>
    <string name="gps_permission_reject">User should grant a permission to proceed</string>
    <string name="geofence_removed">Geofence Removed</string>
    <string name="geofence_denied">Geofence Denied</string>


    <!-- Fare Tab -->
    <string name="fare_origin_legend">Origin : </string>
    <string name="fare_destination_legend">Destination Zone : </string>
    <string name="fare_passenger_legend">Passenger Count : </string>
    <string name="fare_payment_title">Payment</string>
    <string name="fare_origin_title">Please Select Origin Stop</string>
    <string name="fare_destination_title">Please Select Destination Group</string>
    <string name="fare_passenger_title">ADULT</string>
    <string name="fare_adult_title">ADULT</string>
    <string name="fare_senior_title">SENIOR</string>
    <string name="fare_student_title">STUDENT</string>
    <string name="fare_price_title">Fare</string>

    <!-- Setting Tab -->
    <string name="setting_thai_language">\t\tThai</string>
    <string name="setting_english_language">\t\tEnglish</string>
    <string name="setting_language_title">Change Language</string>
    <string name="setting_user_info">Driver Info</string>
    <string name="setting_hand_over">Trip Off</string>
    <string name="setting_log_out">Log Out</string>

    <string name="oauth_client_id">765954447697-v375b8de0k5p5sq5f35arhqsje3sghgg.apps.googleusercontent.com</string>

</resources>
