<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/abc_dialog_padding_material"
    android:background="@color/colorNavy">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingEnd="100dp"
            android:paddingStart="100dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/abc_text_size_display_4_material"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_user_info"
                    android:textColor="@color/colorWhite"
                    android:minLines="2"
                    android:gravity="center"
                    android:textSize="@dimen/abc_floating_window_z" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ap.travel.hotel@gmail.com"
                    android:textColor="@color/colorWhite"
                    android:minLines="1"
                    android:gravity="center"
                    android:textSize="@dimen/abc_floating_window_z" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_language_title"
                    android:textColor="@color/colorWhite"
                    android:minLines="2"
                    android:gravity="center"
                    android:textSize="@dimen/abc_floating_window_z" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_thai_language"
                        android:id="@+id/setting_thai_btn"
                        android:layout_column="5"
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:checked="false" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_english_language"
                        android:id="@+id/setting_english_btn"
                        android:layout_column="5"
                        android:textColor="#ffffff"
                        android:checked="true" />



                </RadioGroup>


            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dip"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
            android:layout_height="wrap_content"
            android:text="@string/setting_hand_over"
            android:textColor="@color/colorWhite"
            android:minLines="3"
            android:gravity="center"
            android:textSize="@dimen/abc_floating_window_z"
            android:background="@drawable/bg_navy_rounded_corners"
            android:layout_marginRight="@dimen/abc_text_size_display_4_material"
            android:id="@+id/setting_hand_over_txt" />

        <TextView
            android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
            android:layout_height="wrap_content"
            android:text="@string/setting_log_out"
            android:textColor="@color/colorWhite"
            android:minLines="3"
            android:gravity="center"
            android:textSize="@dimen/abc_floating_window_z"
            android:background="@drawable/bg_navy_rounded_corners"
            android:id="@+id/setting_log_out_txt" />
    </LinearLayout>



</LinearLayout>
